<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:id="@+id/txtTexto"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/white"
        android:textSize="10sp"
        android:gravity="center"
        android:elevation="20dp"
        android:layout_margin="@dimen/padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margem"
        android:layout_marginRight="@dimen/margem">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtTexto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            />

        <ImageButton
            android:id="@+id/btnEnviar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_upload"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/tamanho"
        android:layout_marginTop="@dimen/margem"
        android:layout_marginBottom="@dimen/margem"
        android:layout_marginLeft="@dimen/margem"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margem"
        android:layout_marginRight="@dimen/margem"
        android:gravity="bottom">

        <SeekBar
            android:id="@+id/skbTamanho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:max="80"
            android:min="10"
            android:progress="10"/>

        <TextView
            android:id="@+id/txtTamanho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="20sp"
            android:text="10sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/estilo"
        android:layout_marginTop="@dimen/margem"
        android:layout_marginLeft="@dimen/margem"
        android:layout_marginBottom="@dimen/margem"/>

        <CheckBox
            android:id="@+id/ckbNegrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negrito"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/padding"/>

        <CheckBox
            android:id="@+id/ckbItalico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italico"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/padding"/>

        <CheckBox
            android:id="@+id/ckbMaiusculas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maiusculas"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/padding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cor"
        android:textSize="20sp"
        android:layout_marginLeft="@dimen/margem"
        android:layout_marginTop="@dimen/margem"
        android:layout_marginBottom="@dimen/margem"/>

        <RadioGroup
            android:id="@+id/rdgCor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/margem">

            <RadioButton
                android:id="@+id/rdbVermelho"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/red"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/rdbVerde"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/green"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/rdbAzul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blue"
                android:textSize="16sp"/>

        </RadioGroup>

</LinearLayout>